menifest/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-deploy
spec:
  selector:
    matchLabels:
      tier: back
  replicas: 2
  template:
    metadata:
      labels:
        tier: back
    spec:
      containers:
      - name: book-back
        image: 596401894998.dkr.ecr.ap-northeast-2.amazonaws.com/book-network:back
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"            
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
          - mountPath: /book_db
            name: efs-volume
        ports:
        - containerPort: 8080
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
              matchExpressions:
              - key: tier
                operator: In
                values:
                - back
            topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: efs-volume
          persistentVolumeClaim:
            claimName: efs-pvc
