menifest/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: front
  template:
    metadata:
      name: front-deployment
      labels:
        tier: front
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: tier
                operator: In
                values:
                - front
            topologyKey: "kubernetes.io/hostname"
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: tier
                operator: In
                values:
                - back 
            topologyKey: "kubernetes.io/hostname"      
      containers:
        - name: front-service
          image: 596401894998.dkr.ecr.ap-northeast-2.amazonaws.com/book-network:front
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8080
