menifest/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    tier: back
  ports:
  - port: 80
    targetPort: 8080
