menifest/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  type: LoadBalancer
  selector:
    tier: front
  ports:
  - port: 80
    targetPort: 80
