menifest/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  labels:
    app: web
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/tls-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:596401894998:certificate/718e288e-9ba8-459e-b262-b30787556e0f
spec:
  defaultBackend:
    service:
      name: front-service
      port:
        number: 3000
  rules:
  - host: "book-network.net"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: front-service
            port: 
              number: 3000
